<resources>
    <!-- textes  -->
    <string name="app_name">McDroid</string>
    <string name="app_welcome">Bienvevue chez</string>
    <string name="app_entree">Entrées</string>
    <string name="app_plat">Plats</string>
    <string name="app_dessert">Desserts</string>
    <string name="loading_text">Chargement...</string>
    <!-- cart string -->
    <string name="cart_Validation">votre plat a ete ajouté au panier !</string>
    <string name="cart">Cart</string>
    <string name="cart_quantity">Quantity: </string>
    <string name="cart_order">Commander </string>
    <!-- Login string -->
    <string name="login_register">Register </string>
    <string name="login_login">Login </string>
    <string name="login_title">Veuillez vous conecter !</string>
    <string name="login_noaccount">Vous n\'avez pas de compte ?</string>
    <string name="login_createaccount">Créez en un !</string>
    <!-- Placeholder formulaire -->
    <string name="placeholder_firstname">Nom</string>
    <string name="placeholder_lastname">Prénom</string>
    <string name="placeholder_address">Adresse</string>
    <string name="placeholder_email">Email</string>
    <string name="placeholder_password">Password</string>
    <!-- order string -->
    <string name="order_title">Vos commandes</string>

    <!-- images  -->
    <string name="img_descripton_mcdroid">image d\'android</string>
    <string name="img_descripton_entrees">image d\'entree</string>
    <string name="img_descripton_desserts">image de dessert</string>
    <string name="img_descripton_plat">image de plat</string>
    <!-- toasts  -->

    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
</resources>